bugfix, tomme resh i kontrH-tab

--- a/inst/NSmndRapp.Rnw
+++ b/inst/NSmndRapp.Rnw
@@ -24,7 +24,7 @@ datoTil <- Sys.Date()
 aarTil <- lubridate::year(datoTil)
 datoFra <- as.Date(paste0(aarTil-1,'-', lubridate::month(datoTil), '-', '01'))
 aarFra <- paste0(aarTil-5, '-01-01')
-nordisk <- ifelse(sum(as.numeric(unique(HovedSkjema$LandKode)))==1, 0, 1)
+nordisk <- ifelse(sum(as.numeric(unique(HovedSkjema$LandKode)), na.rm = T)==1, 0, 1)
 fjernSide <- ifelse(nordisk==1, '<0>[noframenumbering]', '[fragile]')
 Komplikasjoner <- ifelse(nordisk==1, '', 'Komplikasjoner')
 utNord <- ifelse(nordisk==1, '- ikke for nordisk', '')
